--- a/signIn-with-apple/build.gradle
+++ b/signIn-with-apple/build.gradle
@@ -2,6 +2,9 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'com.jfrog.bintray'
+apply plugin: 'com.github.dcendents.android-maven'
+
+group = 'com.github.psalva'
 
 android {
     compileSdkVersion 29
@@ -9,7 +12,7 @@ android {
     resourcePrefix "sign_in_with_apple_button_"
 
     defaultConfig {
-        minSdkVersion 22
+        minSdkVersion 21
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
