--- a/signIn-with-apple/build.gradle
+++ b/signIn-with-apple/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     implementation "androidx.fragment:fragment:1.2.2"
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "com.google.android.material:material:1.3.0-alpha02"
 
     testImplementation 'junit:junit:4.12'
     testImplementation 'androidx.test.ext:junit:1.1.1'
